<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
		android:id="@+id/item_home"
		android:enabled="true"
		android:icon="@drawable/selector_tab_home"
		android:iconTint="@color/white"
		android:title="@string/home"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/item_explore"
		android:enabled="true"
		android:icon="@drawable/selector_tab_explore"
		android:iconTint="@color/white"
		android:title="@string/explore"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/item_favorite"
		android:enabled="true"
		android:icon="@drawable/selector_tab_favorite"
		android:iconTint="@color/white"
		android:title="@string/favorite"
		app:showAsAction="ifRoom" />

	<item
		android:id="@+id/item_user"
		android:enabled="true"
		android:icon="@drawable/selector_tab_user"
		android:iconTint="@color/white"
		android:title="@string/user"
		app:showAsAction="ifRoom" />

</menu>